--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -222,6 +221,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Brazil/ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.9541400598087!2d-43.210487199999996!3d-22.951916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sChrist%20the%20Redeemer!5e0!3m2!1sen!2sus!4v1682342699328!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Christ The Redeemer Statue</h4>
 		<p>This giant statue of Jesus Christ stands on a 26 feet tall pedestal and is 98 feet tall and 92 feet 
 		long with its arms stretched.
@@ -229,6 +229,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Brazil/CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29386.99197251993!2d-43.18575529999998!3d-22.973270799999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd523d20f9c53%3A0x693c6132635e6b0d!2sCopacabana%2C%20Rio%20de%20Janeiro%20-%20State%20of%20Rio%20de%20Janeiro%2C%20Brazil!5e0!3m2!1sen!2sus!4v1682342734604!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Copacabana</h4>
 		<p>Located in the southern part of the city, this beach is 2.5 miles long and is one of the most 
 		famous beaches in the world.
@@ -236,6 +237,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Brazil/RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.459017366101!2d-43.18739679999997!3d-22.97014239999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd54090bfd0a3%3A0xf2e8a97fde1fd02d!2sRIO-CARNIVAL!5e0!3m2!1sen!2sus!4v1682342929195!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Rio Carnival 2023</h4>
 		<p>Carnival is a festival held every year before Lent and is one of the biggest carnivals in the world.
 		</p>
@@ -247,18 +249,21 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Brazil/SaoPauloMuseumOfArt.jpg" alt = "São Paulo Museum of Art" style = "height: 100% width: 100%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.195696784533!2d-46.6558819!3d-23.561414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59ceb1eb771f%3A0xe904f6a669744da1!2sMuseum%20of%20Art%20of%20S%C3%A3o%20Paulo%20Assis%20Chateaubriand!5e0!3m2!1sen!2sus!4v1682342979681!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>São Paulo Museum of Art</h4>
 		<p>This art museum contains modern art from all over Latin America, Africa, Asia, and Europe.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Brazil/MuseuDoFutebol.jpg" alt = "Museu do Futebol" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.577550783277!2d-46.665136399999994!3d-23.547691999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5825daacb07f%3A0xcfdec9e87c999ece!2sMuseu%20do%20Futebol!5e0!3m2!1sen!2sus!4v1682343013341!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Museu do Futebol</h4>
 		<p>The Football (soccer) Museum is dedicated to the practice and history of football in Brazil and around the world.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Brazil/IbirapueraPark.jpg" alt = "Ibirapuera Park" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4715356663773!2d-46.65763359999996!3d-23.58741619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sIbirapuera%20Park!5e0!3m2!1sen!2sus!4v1682343066115!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ibirapuera Park</h4>
 		<p>This urban park is the most visited park in South America and is often compared to Central Park in New York City.
 		<p/>
@@ -270,6 +275,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Brazil/AnavilhanasNationalPark.jpg" alt = "Anavilhanas National Park" style = "width: 25%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.7258680210425!2d-65.8560664!3d-3.4168320999999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x921c000000008467%3A0x5210a1dfd753ea34!2sAnavilhanas%20National%20Park!5e0!3m2!1sen!2sus!4v1682343103341!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Anavilhanas National Park</h4>
 		<p>This nature reserve protects the Anavilhanas Archipelago in Rio Negro.</p>
 	</div>
