--- a/CanadaGuide.html
+++ b/CanadaGuide.html
@@ -177,7 +177,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -223,12 +222,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Canada/CaveBasinSite.jpg" alt = "Cave Basin Site" style = "height: 80% width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2501.7134942956222!2d-115.5915223!3d51.1690712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5370ca6b9ae405bf%3A0xa9b292141d3c34d2!2sCave%20and%20Basin%20National%20Historic%20Site!5e0!3m2!1sen!2sus!4v1682343170388!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Cave and Basin National Historic Site</h4>
 		<p>This site is located in the Canadian Rocky Mountains at the thermal mineral springs.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Canada/LakeMinnewanka.jpg" alt = "Lake Minnewanka" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159806.36700950752!2d-115.37545909999996!3d51.25637915000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5370d2948efafecd%3A0x648548874b447ec6!2sLake%20Minnewanka!5e0!3m2!1sen!2sus!4v1682343208627!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Lake Minnewanka</h4>
 		<p>This lake was known to the First Nations people as Minn-waki or “lake of the spirits” and can be 
 			explored by boat or on foot.
@@ -241,12 +242,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Canada/NotreDameBasilica.jpg" alt = "Notre-Dame Basilica" style = "height: 100% width: 100%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.2758494499653!2d-73.5561204!3d45.5045254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a575897713d%3A0x1ffcef9f1d0d96aa!2sNotre-Dame%20Basilica%20of%20Montreal!5e0!3m2!1sen!2sus!4v1682343241840!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Notre-Dame Basilica of Montreal</h4>
 		<p>This was the first Gothic revival style church to be built in Canada.
 		</p>
 	</div>
 	<div class = "column">
 		<img src = "Images/Canada/Biodome.jpg" alt = "Biodome" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2793.536216868595!2d-73.5497189!3d45.55965450000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91c0d04c267b1%3A0x1cc677ac9fbe265b!2sBiodome!5e0!3m2!1sen!2sus!4v1682343268821!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Biodome</h4>
 		<p>This facility allows you to walk through replicas of different ecosystems found in North and South America.
 		</p>
@@ -258,12 +261,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Canada/VancouverAquarium.jpg" alt = "Vancouver Aquarium" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2601.728416289491!2d-123.1308774!3d49.300487600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486718d7aca6ca7%3A0x5f251627980ee358!2sVancouver%20Aquarium!5e0!3m2!1sen!2sus!4v1682343303863!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Vancouver Aquarium</h4>
 		<p>The Vancouver Aquarium was the first public aquarium to open in Canada.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Canada/CapilanoBridge.jpeg" alt = "Capilano Bridge" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2599.490673388458!2d-123.11492439999999!3d49.3428609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54866fd200dcde49%3A0xf350b3ec85130f5e!2sCapilano%20Suspension%20Bridge%20Park!5e0!3m2!1sen!2sus!4v1682343346038!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Capilano Suspension Bridge Park</h4>
 		<p>This bridge crosses 230 feet above the Capilano River and is 460 feet long.
 		</p>
