--- a/CroatiaGuide.html
+++ b/CroatiaGuide.html
@@ -177,7 +177,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -217,18 +216,21 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Croatia/BrokenRelationships.jpg" alt = "Museum of Broken Relationships" style = "height: 80% width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.8138424166114!2d15.973426700000001!3d45.814986499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fd57a85a6f%3A0x86f5272433861a8!2sMuseum%20of%20Broken%20Relationships!5e0!3m2!1sen!2sus!4v1682343826221!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Museum of Broken Relationships</h4>
 		<p>This museum contains a collection of donated personal items devoted to failed relationships.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Croatia/CathedralOfZagreb.jpg" alt = "Cathedral of Zagreb" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.8377162915654!2d15.979800700000007!3d45.81450840000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d701f8ef1d1d%3A0x312b512f1e7f6df9!2sCathedral%20of%20Zagreb!5e0!3m2!1sen!2sus!4v1682343860840!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Cathedral of Zagreb</h4>
 		<p>This 12th century Neo Gothic cathedral is the second largest building in Croatia.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Croatia/FacultyOfScience.jpg" alt = "Botanical Garden of the Faculty of Science" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2781.315252979786!2d15.972202200000003!3d45.8049444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6f09779f56d%3A0xcda17b37d597e5d3!2sBotanical%20Garden%20of%20the%20Faculty%20of%20Science%2C%20University%20of%20Zagreb!5e0!3m2!1sen!2sus!4v1682343891733!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Botanical Garden of the Faculty of Science</h4>
 		<p>This facility is home to over 10,000 species of plants with 1,800 of them being exotic ones.
 		</p>
@@ -240,18 +242,21 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Croatia/CableCar.jpg" alt = "Dubrovnik Cable Car" style = "height: 100% width: 100%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.867431215135!2d18.1116579!3d42.642970299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134c74ccb0b9b0eb%3A0xa847d887c0a56491!2sDubrovnik%20Cable%20Car!5e0!3m2!1sen!2sus!4v1682343929052!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Dubrovnik Cable Car</h4>
 		<p>Takes passengers 778 meters to a plateau with a view of the city and restaurant.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Croatia/VirginMaryCathedral.jpg" alt = "The Cathedral of the Assumption of the Virgin Mary" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2935.0130736005367!2d18.110412099999994!3d42.639882799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134c0b33afeeb96d%3A0xb48d9d03361daf05!2sThe%20Cathedral%20of%20the%20Assumption%20of%20the%20Virgin%20Mary!5e0!3m2!1sen!2sus!4v1682343967869!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Cathedral of the Assumption of the Virgin Mary</h4>
 		<p>This cathedral church was built during the years 1642 and 1646 in the Baroque style.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Croatia/Lovrijenac.jpg" alt = "Lovrijenac" style = "width: 75%">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.96065747496!2d18.104089899999984!3d42.64099399999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134c0b2cffb94241%3A0x3fd5d930c71b0205!2sLovrijenac!5e0!3m2!1sen!2sus!4v1682344009973!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Lovrijenac</h4>
 		<p>This historical fortress is a theater and was built on top of a 37 feet high cliff.
 		</p>
