--- a/EnglandGuide.html
+++ b/EnglandGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -216,6 +215,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/England/BritishMuseum.jpg" alt = "The British Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.6621872680776!2d-0.12695659999999998!3d51.5194133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b323093d307%3A0x2fb199016d5642a7!2sThe%20British%20Museum!5e0!3m2!1sen!2sus!4v1682344414134!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The British Museum</h4>
 		<p>This museum is dedicated to human history, art, and culture and contains about 
 			eight million works.
@@ -223,6 +223,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/England/LondonEye.jpg" alt = "London Eye">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.540603931596!2d-0.11955370000000001!3d51.5032973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b900d26973%3A0x4291f3172409ea92!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2sus!4v1682344443997!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>London Eye</h4>
 		<p>This is the largest cantilevered observation wheel in Europe, found on the South 
 			Bank of the River Thames. It is 443 feet tall and has a diameter of 394 feet 
@@ -231,6 +232,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/England/HydePark.jpg" alt = "Hyde Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.3241847968798!2d-0.16573029999999997!3d51.5072682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876054929181a85%3A0xd1af6c4f49b4bd0c!2sHyde%20Park!5e0!3m2!1sen!2sus!4v1682344476233!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Hyde Park</h4>
 		<p>This park is known for its holding of large rock concerts by artists such as Queen, 
 			Pink Floyd, and the Rolling Stones. It is also the largest of the Royal Parks in 
@@ -244,6 +246,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/England/BirminghamBotanical.jpg" alt = "The Birmingham Botanical Garden">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2430.6582352685828!2d-1.9296331999999996!3d52.467216699999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870bc5332a14a21%3A0x5a9d81904b6f7785!2sThe%20Birmingham%20Botanical%20Gardens!5e0!3m2!1sen!2sus!4v1682344518969!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Birmingham Botanical Garden</h4>
 		<p>This garden features seven thousand different plants from all over the world and a 
 			collection of exotic birds.
@@ -251,6 +254,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/England/BirminghamLibrary.jpg" alt = "Library of Birmingham">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2429.9684031633797!2d-1.9085044000000004!3d52.47970780000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870bcf37a41b8cd%3A0x6dbc4748b6dc2cb2!2sLibrary%20of%20Birmingham!5e0!3m2!1sen!2sus!4v1682344551847!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Library of Birmingham</h4>
 		<p>This library was built to replace the Birmingham Central Library in September 2013 and 
 			is considered the largest public library in the United Kingdom.
