--- a/FranceGuide.html
+++ b/FranceGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -215,6 +214,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/France/Louvre.jpg" alt = "The Louvre">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5249.748202557836!2d2.333266634887691!3d48.860611100000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2sLouvre%20Museum!5e0!3m2!1sen!2sus!4v1682344600033!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Louvre</h4>
 		<p>This is the world’s most visited museum and contains artworks and artifacts from 6th century 
 			BC to the 19th century, with its best known work being the Mona Lisa.
@@ -222,6 +222,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/France/EiffelTower.jpg" alt = "The Eiffel Tower">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.9916246075636!2d2.2944812999999997!3d48.858370099999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sEiffel%20Tower!5e0!3m2!1sen!2sus!4v1682344654957!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Eiffel Tower</h4>
 		<p>The Eiffel Tower stands at 1,083 feet tall and was built between the years 1887 and 1889. This 
 			tower was built to be the entrance gateway to the International Exposition.
@@ -229,6 +230,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/France/ArcDeTriomphe.jpg" alt = "Arc de Triomphe">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.18279825137!2d2.2950274999999993!3d48.8737917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fec70fb1d8f%3A0xd9b5676e112e643d!2sArc%20de%20Triomphe!5e0!3m2!1sen!2sus!4v1682344684995!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Arc de Triomphe</h4>
 		<p>This national monument took thirty years to build and is considered to be a large part of France’s 
 			national identity. Every year the Tour de France bicycle race ends near here.
@@ -236,6 +238,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/France/NotreDameCathedral.jpg" alt = "Notre Dame Cathedral">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.274896484831!2d2.3499021!3d48.85296820000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671e19ff53a01%3A0x36401da7abfa068d!2sCath%C3%A9drale%20Notre-Dame%20de%20Paris!5e0!3m2!1sen!2sus!4v1682344717174!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Notre Dame Cathedral</h4>
 		<p>This cathedral is one of the most famous examples of French gothic architecture. It was finished being 
 			built in 1260 and was dedicated to the Virgin Mary.
@@ -248,12 +251,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/France/FineArtsMuseum.jpg" alt = "Museum of Fine Arts of Lyon">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.2036041417364!2d4.833619100000001!3d45.7671097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eafeee747451%3A0x1782e78fe3937e6f!2sMuseum%20of%20Fine%20Arts%20of%20Lyon!5e0!3m2!1sen!2sus!4v1682344753638!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Museum of Fine Arts of Lyon</h4>
 		<p>This art museum houses art from the time of ancient Egypt all the way to the modern period.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/France/ParcDeLaTete.jpg" alt = "Parc de la Tête d'Or">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2782.689969906696!2d4.8552143999999995!3d45.777403199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eaeb185f2a45%3A0xef56b64bed8543c!2sParc%20de%20la%20T%C3%AAte%20d&#39;Or!5e0!3m2!1sen!2sus!4v1682344830998!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Parc de la Tete d'Or</h4>
 		<p>This 19th century park’s name translates to “Park of the Golden Head.” Boating takes place in the summer 
 			and the center of the park is a zoo that can be entered free of charge.
@@ -261,6 +266,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/France/SaintJeanBaptisteCathedral.jpg" alt = "Saint-Jean-Baptiste Cathedral">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.518366855398!2d4.8272903!3d45.76080079999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ebab1138228f%3A0xedb78e273a464728!2sCath%C3%A9drale%20Saint-Jean-Baptiste!5e0!3m2!1sen!2sus!4v1682344871654!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Saint-Jean-Baptiste Cathedral</h4>
 		<p>In December of each year Lyon holds the Festival of Lights where the people will place candles 
 			in the windows of this cathedral.
