--- a/GermanyGuide.html
+++ b/GermanyGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -220,6 +219,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Germany/EnglishGarden.jpg" alt = "English Garden">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2661.199700023447!2d11.6055522!3d48.164232299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e759795f82b6b%3A0xc99bdf627cefefd1!2sEnglish%20Garden!5e0!3m2!1sen!2sus!4v1682344961120!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>English Garden</h4>
 		<p>This is the largest park in Munich, located in the center of the city. Its main attractions 
 			are the Monopteros, the Chinese Tower, and the Japanese Tower.
@@ -227,6 +227,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Germany/AsamChurch.jpg" alt = "Asam Church">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.7076671226628!2d11.5696412!3d48.1351607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf5f63fba3c9%3A0xa5ebd6eabef33b40!2sAsamkirche!5e0!3m2!1sen!2sus!4v1682344995493!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Asam Church</h4>
 		<p>This church was built by the Asam brothers as their private church and is now one of the most 
 			important buildings of the German Late Baroque.
@@ -234,6 +235,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Germany/HellabrunnZoo.jpg" alt = "Hellabrunn Zoo">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2664.6889341702063!2d11.553888899999999!3d48.0969444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddedf8800b16b%3A0xd512ed9676ef0ad8!2sHellabrunn%20Zoo!5e0!3m2!1sen!2sus!4v1682345028633!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Hellabrunn Zoo</h4>
 		<p>This zoo features a high ratio of enclosures that are cageless, relying on moats to keep animals 
 			in place. This was the first zoo to be organized by geographical aspects rather than species.
@@ -246,6 +248,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Germany/BerlinWallMem.jpg" alt = "Berlin Wall Memorial">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77701.16393583924!2d13.33503645!3d52.5124186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851f217b14267%3A0xea53fe8afbc1b1ac!2sBerlin%20Wall%20Memorial!5e0!3m2!1sen!2sus!4v1682345069961!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Berlin Wall Memorial</h4>
 		<p>A former board of the Berlin Wall that once separated the city of berlin now serves as a window 
 			of remembrance for visitors to see.
@@ -253,6 +256,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Germany/BrandenburgGate.jpg" alt = "Brandenburg Gate">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2427.948305309046!2d13.377704100000011!3d52.5162746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c655f20989%3A0x26bbfb4e84674c63!2sBrandenburg%20Gate!5e0!3m2!1sen!2sus!4v1682345096881!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Brandenburg Gate</h4>
 		<p>This neoclassic monument was built in the 18th century and is known as a symbol of the history 
 			of Germany and Europe as well as European unity.
@@ -265,12 +269,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Germany/CologneCathedral.jpg" alt = "Cologne Cathedral">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.050538531488!2d6.958281400000001!3d50.941278399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf25a5369c3d2f%3A0x29ec913896e3a9c6!2sCologne%20Cathedral!5e0!3m2!1sen!2sus!4v1682345128711!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Cologne Cathedral</h4>
 		<p>This cathedral is the largest gothic church in northern Europe at 515 feet tall.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Germany/BelgianQuarter.jpg" alt = "Belgian Quarter">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.52708150985!2d6.938210199999992!3d50.928090999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf24ff1c24fdbd%3A0xdeb22149910472a2!2sLatin%20Quarter%2C%2050674%20Cologne%2C%20Germany!5e0!3m2!1sen!2sus!4v1682345212610!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Belgian Quarter</h4>
 		<p>This area is located in the inner city district of Cologne features cuisine and 
 			is known as a meeting place for the creative arts.
@@ -278,6 +284,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Germany/LudwigMuseum.jpg" alt = "Ludwig Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.0734866105713!2d6.960230999999999!3d50.940854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf25ba7999aef3%3A0xfaf4b54772e2b8ef!2sMuseum%20Ludwig!5e0!3m2!1sen!2sus!4v1682345240952!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ludwig Museum</h4>
 		<p>This museum features modern art works from pop art, surrealism, and abstract. 
 			It also has one of the largest Picasso collections in Europe, as well as 
