--- a/GreeceGuide.html
+++ b/GreeceGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -209,6 +208,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Greece/Olympieion.jpg" alt = "Olympieion">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.3354565105287!2d23.733100000000004!3d37.9693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd169b9c6429%3A0x5519bb221fe94255!2sTemple%20of%20Olympian%20Zeus!5e0!3m2!1sen!2sus!4v1682345300285!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Olympieion</h4>
 		<p>Also known as the Temple of Zeus, this temple was built during the reign 
 			of the Athenian tyrants of 6th century BC.
@@ -216,12 +216,14 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Greece/AncientAcropolis.jpg" alt = "Ancient Acropolis">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25161.918723614523!2d23.725749099999998!3d37.97153175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd115926d4b3%3A0xc1b7afae2bd1b7ea!2sAcropolis!5e0!3m2!1sen!2sus!4v1682345371633!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ancient Acropolis</h4>
 		<p>This is the most complete ancient Greek monumental complex that still exists.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Greece/NationalArchaeologicalMuseum.jpg" alt = "National Archaeological Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.490292510193!2d23.732759899999998!3d37.98902290000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd33bfc5fd8b%3A0x2a29d34aacb82b4!2sNational%20Archaeological%20Museum!5e0!3m2!1sen!2sus!4v1682345404692!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>National Archaeological Museum</h4>
 		<p>This museum is dedicated to ancient Greek art from prehistory to late antiquity.
 		</p>
