--- a/IndonesiaGuide.html
+++ b/IndonesiaGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -209,12 +208,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Indonesia/WaterbomBali.jpg" alt = "Waterbom Bali">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.6094613432074!2d115.16929!3d-8.7285829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd246a3ee8f82df%3A0x1291d693f3407fa5!2sWaterbom%20Bali!5e0!3m2!1sen!2sus!4v1682345448053!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Waterbom Bali</h4>
 		<p>This water park has rides, restaurants, and swim-up bars.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Indonesia/UbudMonkeyForest.jpg" alt = "Ubud Monkey Forest">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.7955275159006!2d115.26085839999998!3d-8.5192233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d230963d115%3A0x5a2f8658c8e27d88!2sMonkey%20Forest!5e0!3m2!1sen!2sus!4v1682345478115!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ubud Monkey Forest</h4>
 		<p>This sanctuary is home to three Hindu temples, 155 species of trees, and 
 			1,260 Balinese long-tailed macaque monkeys.
@@ -222,6 +223,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Indonesia/TirtaEmpul.jpg" alt = "Tirta Empul">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.867942986779!2d115.3159348!3d-8.414628199999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd223a808c662e7%3A0x82781ea284d30002!2sTirta%20Empul%20Temple%20-%20Dadong%20Lulu!5e0!3m2!1sen!2sus!4v1682345509643!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Tirta Empul</h4>
 		<p>This sacred water temple is famous for its holy water spring that Balinese
 			Hindus go to for ritual purification.
@@ -229,6 +231,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Indonesia/NyangNyangBeach.jpg" alt = "Nyang Nyang Beach">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31539.468498384376!2d115.09341720000002!3d-8.83916345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd25aa78911975b%3A0xc4c366fba0c88757!2sNyang%20Nyang%20Beach!5e0!3m2!1sen!2sus!4v1682345549848!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Nyang Nyang Beach</h4>
 		<p>This beach on the southern coast of Bali is known for its white sand.
 		</p>
