--- a/IrelandGuide.html
+++ b/IrelandGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -218,6 +217,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Ireland/GuinnessStorehouse.jpg" alt = "Guinness Storehouse">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.0714037846265!2d-6.2867111!3d53.341978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e8440c5056b%3A0xb31933927505e7a2!2sGuinness%20Storehouse!5e0!3m2!1sen!2sus!4v1682345600142!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Guinness Storehouse</h4>
 		<p>This tourist attraction introduces the ingredients of beer and features the history
 			 of Guinness advertising and interactive activities on responsible drinking.
@@ -225,6 +225,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Ireland/PhoenixPark.jpg" alt = "Phoenix Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.294604748607!2d-6.3298133!3d53.3558823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670da9f174517b%3A0xa126d82d9add596b!2sPhoenix%20Park!5e0!3m2!1sen!2sus!4v1682345627970!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Phoenix Park</h4>
 		<p>This park was once a royal hunting ground due to it being filled with wild fallow deer,
 			 which still roam the park to this day.
@@ -232,6 +233,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Ireland/DublinCastle.jpg" alt = "Dublin Castle">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.0206747529146!2d-6.267428399999999!3d53.342886099999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e873566ff89%3A0x50fcdf6c0e15686!2sDublin%20Castle!5e0!3m2!1sen!2sus!4v1682345659973!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Dublin Castle</h4>
 		<p>This castle was built in the early 13th century and served as a headquaters for the 
 			British administration in Ireland until 1992 when Ireland gained independence.
@@ -245,6 +247,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Ireland/GalwayCathedral.jpg" alt = "Galway Cathedral">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.8020517426667!2d-9.0575382!3d53.275166299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96f08ab1b2e1%3A0xd1d28cae4a94419b!2sGalway%20Cathedral!5e0!3m2!1sen!2sus!4v1682345745955!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Galway Cathedral</h4>
 		<p>Also known as the Cathedral of Our Lady Assumed into Heaven and St. Nicholas, 
 			this cathedral was built in 1965 over the old city prison.
@@ -252,11 +255,13 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Ireland/DunguaireCastle.jpg" alt = "Dunguaire Castle">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.327328439448!2d-8.9275248!3d53.140219800000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b9d081b014919%3A0xa27850c9278698ba!2sDunguaire%20Castle%20Car%20Park!5e0!3m2!1sen!2sus!4v1682345777767!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Dunguaire Castle</h4>
 		<p>This castle was built on the southeastern shore of Galway Bay in the 16th century.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Ireland/ConnemaraPark.jpg" alt = "Connemara National Park0">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37930.55460919629!2d-9.917886799999998!3d53.54599079999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485a2588a1ca30a5%3A0xf6d1d848f4aa37c9!2sConnemara%20National%20Park!5e0!3m2!1sen!2sus!4v1682345813860!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Connemara National Park</h4>
 		<p>This park is 2,000 hectares of mountain, bogs, grasslands, and forests. It also 
 			features a variety of common song birds and carnivourous plants.
