--- a/ItalyGuide.html
+++ b/ItalyGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -221,6 +220,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Italy/Colosseum.jpg" alt = "The Colosseum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2970.1230728428554!2d12.4922309!3d41.890210200000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f61b6532013ad%3A0x28f1c82e908503c4!2sColosseum!5e0!3m2!1sen!2sus!4v1682345871975!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Colosseum</h4>
 		<p>The Colosseum was built between CE 70 and 72 during the reign of Flavian emperors as a 
 			gift to the Roman people that hosted gladiatorial games.
@@ -228,12 +228,14 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Italy/TreviFountain.jpg" alt = "Trevi Fountain">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6197892708074!2d12.48327295!3d41.901033299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6053278340d5%3A0xf676f1e1cc02bbb6!2sTrevi%20Fountain!5e0!3m2!1sen!2sus!4v1682345900292!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Trevi Fountain</h4>
 		<p>This fountain stands 86 feet tall and 161.3 feet wide and is the largest Baroque fountain in the city.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Italy/SistineChapel.jpg" alt = "Sistine Chapel">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.5307988313!2d12.4544835!3d41.902946799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6065c523afdb%3A0xab16c8877fb53e22!2sSistine%20Chapel!5e0!3m2!1sen!2sus!4v1682345927493!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Sistine Chapel</h4>
 		<p>This mural painted by Michelangelo covers the whole altar wall of the Sistine Chapel.
 		</p>
@@ -245,12 +247,14 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Italy/RialtoBridge.jpg" alt = "Rialto Bridge">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.579156342343!2d12.335897999999998!3d45.437984199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1c7faa33a3b%3A0x732011a1298ecc89!2sRialto%20Bridge!5e0!3m2!1sen!2sus!4v1682345955650!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Rialto Bridge</h4>
 		<p>This is the oldest of the four bridges spanning the Grand Canal in Venice.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Italy/GondolaTours.jpg" alt = "Gondola Tours">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.689916486221!2d12.33286820000001!3d45.43575175000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1cc6d7b69e7%3A0xeaa9ce110dca0eef!2sGondola%20Ride!5e0!3m2!1sen!2sus!4v1682345990111!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Gondola Tours</h4>
 		<p>Gondolas are an iconic symbol of Venice, and with so many different routes 
 			to take they are good for sightseeing.
@@ -263,6 +267,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Italy/Pompeii.jpg" alt = "Pompeii">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48363.20488230064!2d14.49368215!3d40.7466196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbc95914ba4ef%3A0xd2d18a72aeb414a4!2s80045%20Pompei%2C%20Metropolitan%20City%20of%20Naples%2C%20Italy!5e0!3m2!1sen!2sus!4v1682346013286!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Pompeii</h4>
 		<p>Pompeii was an ancient city that was buried under volcanic ash from the eruption 
 			of Mount Vesuvius in 79 AD. The city is now available to be toured with an 
@@ -271,6 +276,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Italy/MountVesuvius.jpg" alt = "Mount Vesuvius">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24154.03263460645!2d14.428905799999997!3d40.822382499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133ba508f1413feb%3A0x9cbfa7aa9376793d!2sMount%20Vesuvius!5e0!3m2!1sen!2sus!4v1682346038348!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Mount Vesuvius</h4>
 		<p>Learn to make Italian pizza in a pizza making workshop.
 		</p>
