--- a/JamaicaGuide.html
+++ b/JamaicaGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -216,6 +215,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "Doctor's Cave Beach">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30271.449164877893!2d-77.9292808!3d18.486777800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ed9809e36c8cb57%3A0x7bc00359baba1811!2sDoctor&#39;s%20Cave%20Beach!5e0!3m2!1sen!2sus!4v1682346083949!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Doctor's Cave Beach</h4>
 		<p>This beach features multiple restaurants and is part of the Montego Bay 
 			Marine Park, so you can go snorkeling among the coral reefs and their marine life.
@@ -223,6 +223,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15146.988822887277!2d-77.6600544!3d18.35881375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8edbcc803b74c355%3A0xb8ced44aa625ef4!2sMartha%20Brae%20River!5e0!3m2!1sen!2sus!4v1682346112445!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Bamboo RAfting in the Martha Brae River</h4>
 		<p>Ride on 30 feet long bamboo rafts through the Martha Brae River and learn about 
 			“The Legend of Martha Brae”.
@@ -230,8 +231,9 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3785.50388221401!2d-77.1373969!3d18.415417200000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8edafe5876061b09%3A0x80630a3d44d725f1!2sThe%20World%20Famous%20Dunn&#39;s%20River%20Falls%20%26%20Park!5e0!3m2!1sen!2sus!4v1682346143772!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Dunn's River Falls</h4>
-		<p>This waterfall is180 feet high and is terraced like giant natural stairs that can be climbed. 
+		<p>This waterfall is 180 feet high and is terraced like giant natural stairs that can be climbed. 
 		</p>
 	</div>
 	<div class = "1column">
