--- a/JapanGuide.html
+++ b/JapanGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -222,6 +221,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Japan/TokyoTower.jpg" alt = "Tokyo Tower">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.7479746645863!2d139.7454329!3d35.6585805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bbd9009ec09%3A0x481a93f0d2a409dd!2sTokyo%20Tower!5e0!3m2!1sen!2sus!4v1682346229057!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Tokyo Tower</h4>
 		<p>This communication and observation tower was built in 1958 and is 1,092
 			feet tall. Its inspiration is said to have come from the Eiffel Tower.
@@ -229,6 +229,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Japan/ShinjukuGarden.jpg" alt = "Shinjuku Gyoen National Garden">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.6679882799476!2d139.7100517!3d35.685176299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cc21b93233f%3A0x6a1eb1b5a117f287!2sShinjuku%20Gyoen%20National%20Garden!5e0!3m2!1sen!2sus!4v1682346268534!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Shinjuku Gyoen National Garden</h4>
 		<p>This garden was originally the residence of the Naito family in the early
 			17th century and is home to over 22,000 trees, including cherry blossoms.
@@ -236,6 +237,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Japan/GhibliMuseum.jpg" alt = "GhibliMuseum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2185957457027!2d139.5704317!3d35.696238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018ee34e5038c2d%3A0x4de155903f849205!2sGhibli%20Museum!5e0!3m2!1sen!2sus!4v1682346300295!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ghibli Museum</h4>
 		<p>This museum shows off work from the animation studio Studio Ghibli and
 			is dedicated to the art and skill of animation.
@@ -248,6 +250,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Japan/OsakaCastle.jpg" alt = "Osaka Castle">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.7104303505225!2d135.5258546!3d34.6872571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e0cd5c283afd%3A0xf01d07d5ca11e41!2sOsaka%20Castle!5e0!3m2!1sen!2sus!4v1682346330112!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Osaka Castle</h4>
 		<p>Osaka Castle is a famous Japanese landmark located in the heart of Osaka, known 
 			for its grand architecture and historical significance.
@@ -255,6 +258,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Japan/OsakaAquarium.jpg" alt = "Osaka Aquarium Kaiyukan">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.007314762541!2d135.4289645!3d34.65451819999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e8f48c0da9cd%3A0x6f83c520ae082ccc!2sOsaka%20Aquarium%20Kaiyukan!5e0!3m2!1sen!2sus!4v1682346361521!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Osaka Aquarium Kaiyukan</h4>
 		<p>The Osaka Aquarium Kaiyukan is one of the largest aquariums in the world, located 
 			in Osaka, featuring an enormous tank that houses a variety of marine life, including 
@@ -263,6 +267,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Japan/KobeTower.jpg" alt = "Kobe Port Tower">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.8937884382367!2d135.1866995!3d34.682629999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0028e2e4c1%3A0xb7ee42d807a8ac82!2sKobe%20Port%20Tower!5e0!3m2!1sen!2sus!4v1682346394421!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Kobe Port Tower</h4>
 		<p>This tower is a prominent landmark in the port city of Kobe, known for its 
 			unique shape and nighttime illuminations, offering panoramic views of the city 
