--- a/MalaysiaGuide.html
+++ b/MalaysiaGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -228,11 +227,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Malaysia/PetronasTowers.jpg" alt = "Petronas Towers">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7967.519522389395!2d101.7118781!3d3.15791705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc37d12d669c1f%3A0x9e3afdd17c8a9056!2sPetronas%20Twin%20Towers!5e0!3m2!1sen!2sus!4v1682346703910!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Petronas Towers</h4>
 		<p>This pair of skyscrapers are the tallest twin towers in the world with 88 floors.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Malaysia/BirdPark.jpg" alt = "Kuala Lumpur Bird Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7967.630320990078!2d101.68818640000003!3d3.143442299999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc49c8c1d6ccbb%3A0x8ad65008e031cb85!2sKL%20Bird%20Park!5e0!3m2!1sen!2sus!4v1682346743636!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Kuala Lumpur Bird Park</h4>
 		<p>This park has over 200 species of birds and activites like bird feedings and bird shows. 
             This park also includes a garden, the National Monument, and the Kuala Lumpur Butterfly Park.
@@ -245,6 +246,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Malaysia/TelagaTujuhWaterfalls.jpg" alt = "Telaga Tujuh Waterfall">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2030123.2955135498!2d98.55351093124999!3d6.3830867000000096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304b87d0f557a0ff%3A0xc9a3d36cfcd3968c!2sTelaga%20Tujuh%20Waterfall!5e0!3m2!1sen!2sus!4v1682346788421!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Telaga Tujuh Waterfall</h4>
 		<p>The name Telaga Tujuh means seven Wells Waterfalls, which references the seven 
             connecting natural pools that are fed by seven separate Waterfalls.
@@ -252,6 +254,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Malaysia/LangkawiCableCar.jpg" alt = "Langkawi SkyBridge Cable Car">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1773796041966!2d99.67167859999999!3d6.3710862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304c76e12f53df01%3A0xe2551c0b7d23ba7e!2sLangkawi%20Skybridge%20Cable%20Car!5e0!3m2!1sen!2sus!4v1682346822250!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Langkawi SkyBridge Cable Car</h4>
 		<p>A fifteen minute cable car ride that is 1.4 miles long gives the riders a view 
             of the forest, the Telaga Tujuh waterfall, and the sea.
@@ -259,6 +262,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Malaysia/KilimGeoforestPark.jpg" alt = "Kilim Geoforest Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.914102732579!2d99.85834799999999!3d6.4050671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304c7cc7155b5f49%3A0xe45b745fe15653d5!2sKilim%20Geoforest%20Park!5e0!3m2!1sen!2sus!4v1682346862404!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Kilim Geoforest Park</h4>
 		<p>This 100 square kilometer nature reserve was the first geopark in Southeast Asia. 
             Tours are given by boat on the Kilim River.
@@ -271,6 +275,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Malaysia/KliasRiverCruise.jpg" alt = "Klias River">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.820011387843!2d115.6311893!3d5.4442783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3223351a1351a065%3A0x39c7f20287f99b7c!2sKlias%20River%20Cruise!5e0!3m2!1sen!2sus!4v1682346897084!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>River Cruise on the Klias River</h4>
 		<p>This cruise gives a tour of the Klias wetlands where you can see proboscis 
             monkeys, otters, crocodiles, and other wetland creatures. 
@@ -278,6 +283,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Malaysia/KotaKinabaluCityMosque.jpg" alt = "Kota Kinabalu City Mosque">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253951.4941817207!2d116.16556874999996!3d5.995819550000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b6995e6a6aba7%3A0xf182336a16947a7e!2sKota%20Kinabalu%2C%20Sabah%2C%20Malaysia!5e0!3m2!1sen!2sus!4v1682346956556!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Kota Kinabalu City Mosque</h4>
 		<p>The official opening of this mosque followed the proclamation of the city status of 
             Kota Kinabalu in 2000, Visitors can be given tours and can go paddle boat riding.
