--- a/MoroccoGuide.html
+++ b/MoroccoGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -226,6 +225,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Morocco/Koutoubia.jpg" alt = "Koutoubia">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.371521977659!2d-7.9935429000000005!3d31.623676649999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdafee5c99d75ddf%3A0xd8cd38139a6e6fc2!2sKoutoubia!5e0!3m2!1sen!2sus!4v1682347213002!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Koutoubia</h4>
         <p>This building is the largest Mosque in Morocco being 253 feet tall and is considered 
             a classic example of Moroccan Mosque architecture.
@@ -233,6 +233,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Morocco/HouseOfPhotography.jpg" alt = "House of Photography in Marrakech">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.067751388972!2d-7.9842386000000145!3d31.631995300000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdafee6bb3581ad7%3A0x64bd1297e844a06e!2sHouse%20of%20Photography%20in%20Marrakech!5e0!3m2!1sen!2sus!4v1682347259970!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>House of Photography in Marrakech</h4>
 		<p>This place features about 10,000 documents and vintage photographs from 1870 to 
             1960, with pictures of Moroccan landscapes, architecural complexes, and portraits.
@@ -245,6 +246,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Morocco/AzurArtSpa.jpeg" alt = "Azur Art and Spa">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3401.40834155278!2d-9.772198399999999!3d31.512942900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdad9bcc362cf0b3%3A0xc066d31106b053e7!2sAzur%20Art%20%26%20Spa!5e0!3m2!1sen!2sus!4v1682347295542!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Azur Art and Spa</h4>
 		<p>This luxurious spa and wellness center offers a wide range of treatments, including massages, 
 			facials, and hammam rituals, in a tranquil serence environment. The center also houses a 
@@ -253,6 +255,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Morocco/GalleryKasbah.jpg" alt = "Gallery Kasbah">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3401.41173382721!2d-9.771031699999993!3d31.5128497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdad9bcc57a078a9%3A0x689d37b3386a3caf!2sGallery%20Kasbah!5e0!3m2!1sen!2sus!4v1682347325901!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Gallery Kasbah</h4>
 		<p>This gallery includes eleven halls that showcase different artists with works in the style of 
 			realism, surrealism, abstract, and impressionism.
@@ -260,6 +263,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Morocco/MedinaEssaouira.jpg" alt = "Medina of Essaouira">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6802.755665034265!2d-9.768794850000026!3d31.51378110000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdad9bcd18da9f5b%3A0xf4ae5db26da79818!2sMedina%20of%20Essaouira%2C%20Essaouira%2C%20Morocco!5e0!3m2!1sen!2sus!4v1682347354347!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Medina of Essaouira</h4>
 		<p>This old 18th century town was an international trading seaport that linked Morocco to Europe.</p>
 	</div>
@@ -270,11 +274,13 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Morocco/AgadirBeach.jpg" alt = "Agadir Beach">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3440.9198612166983!2d-9.601743599999997!3d30.4100155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdb3b6e4a899e1f9%3A0xce367b3a8d90f2c9!2sHotel%20Agadir%20Beach%20Club!5e0!3m2!1sen!2sus!4v1682347396327!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Agadir Beach</h4>
 		<p>This beach with white sand has a built-in resort set on the mid-Atlantic coast.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Morocco/Crocoparc.jpg" alt = "Crocoparc">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14082326.528785052!2d-18.462409262702895!3d30.490825973700826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdb3c894a02dbe37%3A0x26943f9b88c1785a!2sCrocoparc!5e0!3m2!1sen!2sus!4v1682347431215!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Crocoparc</h4>
 		<p>This crocodile park has 325 Nile crocodiles, giant tortoises, green iguanas, 
 			anacondas, and marmosets.
