--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -224,18 +223,21 @@
 	<div class = "row">
 		<div class = "1column">
 			<img src = "Images/Australia/SydneyOperaHouse.jpg" alt = "Sydney Opera House">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3313.275722844997!2d151.21529669999998!3d-33.856784399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae665e892fdd%3A0x3133f8d75a1ac251!2sSydney%20Opera%20House!5e0!3m2!1sen!2sus!4v1682342292061!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Sydney Opera House</h4>
 			<p>The Sydney Opera House is an arts center with seven venues located on the Sydney Harbour.
 			</p>
 		</div>
 		<div class = "1column">
 			<img src = "Images/Australia/BondiBeach.jpg" alt = "Bondi Beach">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13247.796759565763!2d151.27274774999998!3d-33.89096239999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b201c6bc3859%3A0x5017d681632ad80!2sBondi%20Beach%20NSW%202026%2C%20Australia!5e0!3m2!1sen!2sus!4v1682342335468!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Bondi Beach</h4>
 			<p>Bondi Beach is named after the surrounding suburb and is represented in the National Rugby League competition. 
 			</p>
 		</div>
 		<div class = "1column">
 			<img src = "Images/Australia/TarongaZooSydney.jpg" alt = "Taronga Zoo Sydney">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3313.7893446527387!2d151.2387668746731!3d-33.84354281774933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ac245aaaaaab%3A0xaeb9849c7a29e226!2sTaronga%20Zoo%20Sydney!5e0!3m2!1sen!2sus!4v1682341468161!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Taronga Zoo Sydney</h4>
 			<p>The Taronga Zoo was the second zoo in Australia to breed a platypus.
 			</p>
@@ -246,12 +248,14 @@
 	<div class = "row">
 		<div class = "1column">
 			<img src = "Images/Australia/QueenVictoriaMarket.jpeg" alt = "Queen Victoria Market">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.2514103185536!2d144.95678500000002!3d-37.80757979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d34379057b1%3A0xf0456760532d450!2sQueen%20Victoria%20Market!5e0!3m2!1sen!2sus!4v1682342420775!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Queen Victoria Market</h4>
 			<p>The Queen Victoria Market is located in the central business district of Melbourne and covers over 17 acres of land.
 			</p>
 		</div>
 		<div class = "column">
 			<img src = "Images/Australia/NationalGalleryOfVictoria.png" alt = "National Gallery of Victoria">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25218.011282548392!2d144.95678500000002!3d-37.807579799999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b1b46283b9%3A0x33718f02306f1e54!2sNational%20Gallery%20of%20Victoria!5e0!3m2!1sen!2sus!4v1682342471063!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>National Gallery of Victoria</h4>
 			<p>Also known as the NGV, this museum houses art collections in two different locations, NGX International and the 
 				Ian Potter Centre: NKV Australia, with a third location to be opened in 2028.
@@ -263,12 +267,14 @@
 	<div class = "row">
 		<div class = "1column">
 			<img src = "Images/Australia/LonePineKoalaSanctuary.jpeg" alt = "Lone Pine Koala Sanctuary">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.9252347837723!2d152.968815!3d-27.5337818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b91502b5bff92a3%3A0xd95a4342ea4d7936!2sLone%20Pine%20Koala%20Sanctuary!5e0!3m2!1sen!2sus!4v1682342520479!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Lone Pine Koala Sanctuary</h4>
 			<p>This is the world’s first and largest Koala Sanctuary that also houses about 80 other species of animals.
 			</p>
 		</div>
 		<div class = "1column">
 			<img src = "Images/Australia/EatStreetNorthshore.jpg" alt = "Eat Street Northshore">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.8143449040163!2d153.0797179!3d-27.4438961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b91590f8a9c68cf%3A0x5a9f2dc532feaee7!2sEat%20Street%20Northshore!5e0!3m2!1sen!2sus!4v1682342550781!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<h4>Eat Street Northshore</h4>
 			<p>Eat Street Northshore is an entertainment center that has over 70 traders (bars, electric shops, restaurants) 
 				with food from every continent but Antartica.
