--- a/EgyptGuide.html
+++ b/EgyptGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -222,6 +221,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Egypt/EgyptianMuseum.jpg" alt = "The Egyptian Museum">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.600515556382!2d31.233667399999998!3d30.0483167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1458b14d72adf029%3A0x9a38f9bbb6edbfe4!2sThe%20Egyptian%20Museum%20in%20Cairo!5e0!3m2!1sen!2sus!4v1682344055062!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Egyptian Museum</h4>
 		<p>This museum contains the largest collection of pharaonic antiquities with over 120,000
 			items and is the largest museum in Africa.
@@ -229,6 +229,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Egypt/KhanEl-Khalili.jpg" alt = "Khan el-Khalili">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.6206729043643!2d31.2622538!3d30.0477386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145840eb2c0e580f%3A0x1761e0e461027d11!2sKhan%20el-Khalili!5e0!3m2!1sen!2sus!4v1682344094252!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Khan el-Khalili</h4>
 		<p>This bazaar (marketplace) was established as the center of trade in the Mamluk era and 
 			contains many workshops that produce traditional crafts and souvenirs.
@@ -236,6 +237,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Egypt/SphinxOfGiza.jpg" alt = "Great Sphinx of Giza">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.1447877919636!2d31.1375674!3d29.9752687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14584f62a3aea979%3A0xc9d3f0a64066bda9!2sGreat%20Sphinx%20of%20Giza!5e0!3m2!1sen!2sus!4v1682344134191!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Great Sphinx of Giza</h4>
 		<p>This limestone statue is of a mythical creature with a human head and lion body. It is 
 			240 feet long and 66 feet tall.
@@ -248,6 +250,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Egypt/KarnakTemple.jpg" alt = "Karnak Temple">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.5327518326353!2d32.65312!3d25.71989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14491592ff9a59e7%3A0x66aae429004c1e2b!2sKarnak%20Temple%20Visitor%20Center!5e0!3m2!1sen!2sus!4v1682344167774!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Karnak Temple</h4>
 		<p>This complex consists of decayed temples, pylons, and chapels that were built starting as 
 			early as 1971-1926 BCE.
@@ -255,12 +258,14 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Egypt/ValleyOfKings.jpg" alt = "Valley of the Kings">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7187.693557904009!2d32.6015937!3d25.742580099999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14493d8ab5defed7%3A0x718fccf6a2e3a9da!2sValley%20of%20the%20Kings!5e0!3m2!1sen!2sus!4v1682344202737!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Valley of the Kings</h4>
 		<p>This archaeological site was the burial site for all pharaohs from 1539-1075 BCE.
 		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Egypt/HatshepsutTemple.jpg" alt = "Queen Hatshepsut Temple">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1796.9930447169186!2d32.60741695!3d25.737973600000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14491618c7bfa7dd%3A0x31fe17a1563b5d3!2sMortuary%20Temple%20of%20Hatshepsut!5e0!3m2!1sen!2sus!4v1682344274279!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Queen Hatshepsut Temple</h4>
 		<p>This temple was built during the reign of Pharaoh Hatshepsut and is considered a masterpiece of 
 			ancient arhitecture.
@@ -273,6 +278,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Egypt/AlexandriaLibrary.jpg" alt = "Alexandria Library">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3412.4267889547004!2d29.9091587!3d31.2089032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c38a0562fe85%3A0xa34cc632ec23e7!2sBibliotheca%20Alexandrina!5e0!3m2!1sen!2sus!4v1682344332254!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Alexandria Library</h4>
 		<p>This was one of the largest libraries of the ancient world. It was a part of a research institute known 
 			as the Mouseion, dedicated to the nine goddesses of the arts.
@@ -280,6 +286,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Egypt/MontazaPalace.jpg" alt = "Montaza Palace">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3409.5516271186425!2d30.015969199999994!3d31.288495399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5d05ef533eccb%3A0xae82154762ef9858!2sMontaza%20Palace!5e0!3m2!1sen!2sus!4v1682344366362!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Montaza Palace</h4>
 		<p>This palace was built in 1892 the last Muhammad Ali Dynasty ruler and overlooks the Mediterranean Sea.
 		</p>
