--- a/KoreaGuide.html
+++ b/KoreaGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -229,6 +228,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/South Korea/SeoulTower.jpg" alt = "N Seoul Tower">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.1652877965166!2d126.98822659999999!3d37.5511694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca257a88e6aa9%3A0x5cf8577c2e7982a5!2sN%20Seoul%20Tower!5e0!3m2!1sen!2sus!4v1682346435429!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>N Seoul Tower</h4>
         <p>This communication and observation tower is located on Nam Mountain and sits at 774 
             feet tall. It is South Korea's first general radio wave tower.
@@ -236,11 +236,13 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Korea/GwangjangMarket.jpg" alt = "Gwangjang Market">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.3642431288413!2d126.99960360000001!3d37.570039799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2ed7e74759b%3A0xd656a34831089f44!2sGwangjang%20Market!5e0!3m2!1sen!2sus!4v1682346468996!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Gwangjang Market</h4>
         <p>This street market is where you can get traditional Korean street food with more than 5,000 shops.</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Korea/GyeongbokgungPalace.jpg" alt = "Gyeongbokgung Palace">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3161.957561691954!2d126.977041!3d37.579617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2c74aeddea1%3A0x8b3046532cc715f6!2sGyeongbokgung%20Palace!5e0!3m2!1sen!2sus!4v1682346508840!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Gyeongbokgung Palace</h4>
 		<p>This palace is the largest of the Five Grand Palaces built by the Joseon dynasty in 1395.</p>
 	</div>
@@ -251,6 +253,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/South Korea/YongdusanPark.jpg" alt = "Yongdusan Park">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.2425605135745!2d129.0326226!3d35.1006536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568e90b3617c897%3A0xbe1730484bbfa93f!2sYongdusan%20Park!5e0!3m2!1sen!2sus!4v1682346550015!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Yongdusan Park</h4>
 		<p>This park's most significant structure is the Busan Diamond Tower that has a 
             panoramic view of the park at 393 feet high.
@@ -258,6 +261,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Korea/HaeundaeBeach.jpg" alt = "Haeundae Beach">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26095.33397132417!2d129.16038419999998!3d35.158697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35688d5c0f17ece1%3A0xc41f3c60c5c74f88!2sHaeundae%20Beach!5e0!3m2!1sen!2sus!4v1682346592393!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Haeundae Beach</h4>
 		<p>Various festivals are held at this beach throughout the year, including e-sport 
             events and an event that occurs in January where participants bathe in near 
@@ -271,6 +275,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/South Korea/CheonjiyeonWaterfall.jpg" alt = "Cheonjiyeon Waterfall">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26693.97216059217!2d126.554417!3d33.2469435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350c5397e5d18685%3A0xdb873e6da9b01b6!2sCheonjiyeon%20Waterfall!5e0!3m2!1sen!2sus!4v1682346629847!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Cheonjiyeon Waterfall</h4>
 		<p>This waterfall is surrounded by a wooded area that is home to a variety of rare plants 
             and large volcanic rocks.
@@ -278,6 +283,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/South Korea/AquaPlanetJeju.jpg" alt = "Aqua Planet Jeju">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.6340726912726!2d126.9278223!3d33.4327833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d136c390ba7c3%3A0xa448ac4d880fc1e9!2sAqua%20Planet%20Jeju!5e0!3m2!1sen!2sus!4v1682346657027!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Aqua Planet Jeju</h4>
 		<p>This is the largest public aquarium in South Korea and features over 45,000 marine creatures. 
             Its main tank is 6,000 tons of water filled with about 27,000 fish.
