--- a/MexicoGuide.html
+++ b/MexicoGuide.html
@@ -176,7 +176,6 @@
 		</select>
 		<a class="active" href="TravelGuide.html">Home</a>
 		<a href="About.html">About</a>
-		<a href="#contact">Contact</a>
 		<div class="search-container">
 			<form action="javascript:void(0);" id="search">
 				<button type="button" onclick="search()">Search</button>
@@ -222,6 +221,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Mexico/ChichenItza.jpg" alt = "Chichen Itza">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.7737525677703!2d-88.5684769!3d20.678781649999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5138b9a098f833%3A0xf70a67530750d45!2zQ2hpY2jDqW4tSXR6w6EsIFl1Y2F0YW4sIE1leGljbw!5e0!3m2!1sen!2sus!4v1682347076013!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Chichen Itza</h4>
 		<p>This prehistoric city was one of the largest Mayan cities to exist and is the 
             most visited archeological site in Mexico
@@ -229,6 +229,7 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Mexico/PlayaDelfines.jpg" alt = "Playa Delfines">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.2952844235197!2d-86.7795105!3d21.060865399999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e8280511ccd4d%3A0xe4ab520c257a81e4!2sPlaya%20Delfines!5e0!3m2!1sen!2sus!4v1682347105571!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Playa Delfines</h4>
 		<p>This beach is the largest beach in Cancun where you have the chance to spot 
             dolphins due to how clear the waters are.
@@ -241,6 +242,7 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Mexico/AnthropologyMuseum.jpg" alt = "National Museum of Anthropology">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.6851942026424!2d-99.1862786!3d19.426003200000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d201b420c8c849%3A0x84231ae36f6ec524!2sMuseo%20Nacional%20de%20Antropolog%C3%ADa!5e0!3m2!1sen!2sus!4v1682347163224!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>National Museum of Anthropology</h4>
 		<p>This museum features artifacts from Mexico's pre-Columbian heritage, like the Aztecs
             Xochipilli statue and the Stone of the Sun.
