--- a/NetherlandsGuide.html
+++ b/NetherlandsGuide.html
@@ -224,7 +224,7 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "Rijksmuseum">
+		<img src = "Images/Netherlands/Rijksmuseum.jpg" alt = "Rijksmuseum">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.57475027097!2d4.8852188!3d52.3599976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609eec1bb16e5%3A0xd54373ae6a408585!2sRijksmuseum!5e0!3m2!1sen!2sus!4v1682347623817!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Rijksmuseum</h4>
         <p>This museum is dedicated to Dutch art and history with a collection of about 
@@ -232,7 +232,7 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "Anne Frank House">
+		<img src = "Images/Netherlands/AnneFrankHouse.jpg" alt = "Anne Frank House">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.735373307881!2d4.8839765!3d52.3752182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c5213e1149%3A0xd49a5d653e635b0a!2sAnne%20Frank%20House!5e0!3m2!1sen!2sus!4v1682347650010!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Anne Frank House</h4>
 		<p>This biographical is dedicated to Anne Frank and her time hiding from nazi 
@@ -240,7 +240,7 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "Van Gogh Museum">
+		<img src = "Images/Netherlands/VanGoghMuseum.jpg" alt = "Van Gogh Museum">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.661967098246!2d4.8810756!3d52.3584159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609ef96d35a5f%3A0xc22828aef97cc51a!2sVan%20Gogh%20Museum!5e0!3m2!1sen!2sus!4v1682347681553!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Van Gogh Museum</h4>
 		<p>This museum is dedicated to Dutch artist Vincent Van Gogh and contains the largest 
@@ -253,7 +253,7 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "Museum Boijmans-van Beuningen">
+		<img src = "Images/Netherlands/BojimansvanMuseum.jpg" alt = "Museum Boijmans-van Beuningen">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.082028674329!2d4.471152017443847!3d51.914214500000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4349f744d00bd%3A0x7c8c657a788cdb98!2sMuseum%20Boijmans%20Van%20Beuningen!5e0!3m2!1sen!2sus!4v1682347722371!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Museum Boijmans-van Beuningen</h4>
 		<p>This museum has a collection of over 151,000 medieval and contemporary 
@@ -261,7 +261,7 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "Cube Houses">
+		<img src = "Images/Netherlands/CubeHouse.jpg" alt = "Cube Houses">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2460.7546396795715!2d4.490574700000001!3d51.920187500000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c43343557fef99%3A0x56d0b49d94f1a5be!2sCube%20Houses!5e0!3m2!1sen!2sus!4v1682347756889!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Cube Houses</h4>
 		<p>These houses are based on the idea of "living as an urban roof" according 
@@ -269,7 +269,7 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "Euromast">
+		<img src = "Images/Netherlands/Euromast.jpg" alt = "Euromast">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.562709804918!2d4.4666374!3d51.9054439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4349b2eda8e4d%3A0x58a81783a14f3ad8!2sEuromast!5e0!3m2!1sen!2sus!4v1682347780861!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Euromast</h4>
 		<p>This observation tower was built for the 1960 Floriade.</p>
@@ -280,7 +280,7 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "The Pier">
+		<img src = "Images/Netherlands/ThePier.jpg" alt = "The Pier">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2450.020422218815!2d4.2827111!3d52.1157572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ba097854f957%3A0x83e6ec574cc11686!2sDe%20Pier!5e0!3m2!1sen!2sus!4v1682347805638!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>The Pier</h4>
 		<p>This pier contains a range of restaurants and shops, as well as activities 
@@ -288,7 +288,7 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "Peace Palace">
+		<img src = "Images/Netherlands/PeacePalace.jpg" alt = "Peace Palace">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2451.6038121891697!2d4.2954650999999995!3d52.0869417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5b0cb569ccd71%3A0x449438d6c1965856!2sPeace%20Palace!5e0!3m2!1sen!2sus!4v1682347830332!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h4>Peace Palace</h4>
 		<p>This is the international law administrative building that houses the 
